--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       post: '投稿'
+      customer: 'カスタマー'
     attributes:
       post:
         title: 'タイトル'
@@ -10,10 +11,11 @@ ja:
         email: 'メールアドレス'
         last_name: '姓'
         first_name: '名'
+        password: 'パスワード'
       comment:
         body: 'コメント'
       genre:
         name: 'ジャンル名'
-      
+
 
 
